@@ -2,6 +2,7 @@ ver 0.20 (not yet released)
 * protocol
   - "commands" returns playlist commands only if playlist_directory configured
   - "search"/"find" have a "window" parameter
+  - report song duration with milliseconds precision
 * tags
   - ape: drop support for non-standard tag "album artist"
 * output
